Reorganização de arquivo

--- a/html-css/style.css
+++ b/html-css/style.css
@@ -1,14 +1,14 @@
 @charset "UTF-8";
 
 body{
-    background-color: antiquewhite;
+    background-color: #E8E1D2;
     font-family: Arial;
     font-size: 20px;
 }
 
 h1{
     color: black;
-    background-color: rgb(205, 166, 104);
+    background-color:;
 }
 
 h2{
