--- a/html-css/style.css
+++ b/html-css/style.css
@@ -1,6 +1,17 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Love+Ya+Like+A+Sister&display=swap');
+@font-face {
+    font-family: 'Bigodes';
+    src: url('fonts/Keep\ Cheese.otf') format('opentype'), url(fonts/Keep\ Cheese.ttf) format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Gatinhos Silhueta';
+    src: url(fonts/kitty\ cats.ttf) format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
 *{
     font-family: Arial, Helvetica, sans-serif;
@@ -23,12 +34,13 @@ main{
 h1{
     color: #AC3931;
     text-shadow: 1px 1px 0px #551b18bf;
-    font-family: 'Love Ya Like A Sister', cursive;
+    font-family: 'Bigodes', cursive;
     text-align: center;
 }
 
 h2{
     color:#B29462;
+    font-family: 'Gatinhos Silhueta', Arial, sans-serif;
 }
 
 p{
