--- a/html-css/style.css
+++ b/html-css/style.css
@@ -68,6 +68,10 @@ p{
     text-align: justify;
     text-indent: 30px;}
 
+aside > a{
+    text-decoration: none;
+    color: black;}
+
 footer{
     font-family: Arial, sans-serif;
     background-color: #004F2D;
@@ -77,7 +81,8 @@ footer{
     border-radius: 20px;}
 
 footer > p{
-    text-align: center;}
+    text-align: center;
+    margin: 0px;}
 
 /* colors
 #091E05
