--- a/html-css/style.css
+++ b/html-css/style.css
@@ -4,19 +4,21 @@
     font-family: 'Bigodes';
     src: url('fonts/Keep\ Cheese.otf') format('opentype'), url(fonts/Keep\ Cheese.ttf) format('truetype');
     font-weight: normal;
-    font-style: normal;
-}
+    font-style: normal;}
+
 @font-face {
     font-family: 'Gatinhos Silhueta';
     src: url(fonts/kitty\ cats.ttf) format('truetype');
     font-weight: normal;
-    font-style: normal;
-}
+    font-style: normal;}
 
+/*Configuração global*/
 *{
-    font-family: Arial, Helvetica, sans-serif;
-}
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;}
 
+/*Criando variaveis*/
 :root{
     --cor0: #091E05;
     --cor1: #004F2D;
@@ -49,7 +51,8 @@ main{
     background-color: white;
     border-radius: 20px;
     box-shadow: 10px 10px 10px #9d7f4aa0;
-    width: 600px;
+    max-width: 800px;
+    min-width: 320px;
     padding: 10px;
     margin: 30px auto;}
 
@@ -64,19 +67,27 @@ h1{
 
 h2{
     color:#B29462;
+    margin: 10px;
     font-family: Arial, sans-serif;
     display: inline;}
 
-h2 span
-{
+h2 span{
     color:#B29462;
+    margin: 10px;
     font-family: 'Gatinhos Silhueta', Arial, sans-serif;}
 
 p{
+    margin: 10px;
     text-align: justify;
     text-indent: 30px;}
 
+nav > video{
+    margin: 20px;
+    width: 500px; 
+    height:300px;}
+
 aside > a{
+    padding: 10px;
     text-decoration: none;
     color: black;}
 
