--- a/html-css/style.css
+++ b/html-css/style.css
@@ -57,7 +57,8 @@ main{
     margin: 30px auto;}
 
 main img{
-    width: 100%;
+    max-width: 100%;
+    height: auto;
 }
 
 h1{
@@ -97,7 +98,7 @@ div.flex-video > figure{
     margin:0 auto;
 }
 div.flex-video > figure> video{
-    width: 100%;
+    max-width: 100%;
     height: auto;
 }
 
