Input tipo radio na pagina contato

--- a/html-css/style.css
+++ b/html-css/style.css
@@ -135,5 +135,9 @@ td{
     text-align: center;
 }
 
+form > p{
+    text-align: center;
+}
+
 /*Ordem shorthand font
 - font-style font-weight font-size font-family
