--- a/exercicios/media-query/mq001/style.css
+++ b/exercicios/media-query/mq001/style.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
-
-/*Estilo para telas*/
+/*Estilo GERAL*/
 
 *{
     margin: 0px;
@@ -8,6 +7,20 @@
 }
 
 html{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:Arial, Helvetica, sans-serif;
     font-size: 1em;
+}
+
+header > h1{
+    text-align: center;
+}
+
+menu{
+    display: none;
+}
+
+article{
+    width: 500px;
+    display: block;
+    margin: auto;
 }
