--- a/exercicios/media-query/mq001/paisagem.css
+++ b/exercicios/media-query/mq001/paisagem.css
@@ -1,2 +1,7 @@
 @charset "UTF-8";
 /*Estilo MODO PAISAGEM*/
+
+body {
+    background-image: url(../cev-landscape.jpg);
+    background-position: left bottom;
+    }
