--- a/exercicios/media-query/mq001/retrato.css
+++ b/exercicios/media-query/mq001/retrato.css
@@ -1,2 +1,7 @@
 @charset "UTF-8";
 /*Estilo MODO RETRATO*/
+
+body {
+background-image: url(../cev-portrait.jpg);
+background-position: center bottom;
+}
