--- a/exercicios/media-query/mq001/style.css
+++ b/exercicios/media-query/mq001/style.css
@@ -6,17 +6,17 @@
     padding: 0px;
 }
 
-html{
+html, body{
     font-family:Arial, Helvetica, sans-serif;
     font-size: 1em;
+    width: 100vw;
+    height: 100vh;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 header > h1{
     text-align: center;
-}
-
-menu{
-    display: none;
 }
 
 article{
