--- a/exercicios/media-query/mq003/media-query.css
+++ b/exercicios/media-query/mq003/media-query.css
@@ -1,2 +1,57 @@
 @charset "UTF-8";
 /*TODAS AS DEMAIS MIDIAS*/
+
+/*IMPRESSÃO*/
+@media print{
+    * { font-family: 'Courier New', Courier, monospace;}
+
+    body{ background-image: url(../back-print.jpg);/*Desnecessário*/}
+    
+    main{ border: 2px solid black;}
+
+    main h1{
+        text-shadow: none;
+        color: black;
+    }
+    
+    img#phone { display: none;}
+    img#tablet { display: none;}
+    img#print { display: block;}
+    img#pc { display: none;}
+    img#tv { display: none;}
+}
+
+/*TABLET*/
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    body{ background-image: url(../back-tablet.jpg);}
+
+    img#phone { display: none;}
+    img#tablet { display: block;}
+    img#print { display: none;}
+    img#pc { display: none;}
+    img#tv { display: none;}
+}
+
+/*DESKTOP*/
+@media screen and (min-width: 1025px) and (max-width: 1280px) {
+    body{ background-image: url(../back-pc.jpg);}
+
+    img#phone { display: none;}
+    img#tablet { display: none;}
+    img#print { display: none;}
+    img#pc { display: block;}
+    img#tv { display: none;}
+}
+
+/*TVS*/
+@media screen and (min-width: 1280px) and (max-width: 1440px) {
+    body{ background-image: url(../back-tv.jpg);}
+
+    main{ width: 700px;}
+
+    img#phone { display: none;}
+    img#tablet { display: none;}
+    img#print { display: none;}
+    img#pc { display: none;}
+    img#tv { display: block;}
+}
