--- a/exercicios/media-query/mq001/style.css
+++ b/exercicios/media-query/mq001/style.css
@@ -2,30 +2,61 @@
 /*Estilo GERAL*/
 
 *{
+    font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
     padding: 0px;
 }
 
 html, body{
-    font-family:Arial, Helvetica, sans-serif;
-    font-size: 1em;
-    width: 100vw;
-    height: 100vh;
-    background-size: contain;
-    background-repeat: no-repeat;
+    background-color: #FF5666;
+}
+
+header{
+    background-color: #2E5339;
 }
 
 header > h1{
-    text-align: center;
-    padding-top: 10px;
-}
-
-main > h2{
     padding: 10px;
+    text-align: center;
 }
 
-article{
-    width: 500px;
+menu{
     display: block;
+}
+
+menu > ul{
+    list-style-type: none;
+}
+
+menu > ul > li > a{
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    text-align: center;
+    background-color: #495F41;
+    color: black;
+    border-top: 2px solid rgb(60, 60, 60);
+}
+
+menu > ul > li > a:hover{
+    background-color: rgb(60, 60, 60);
+}
+
+main{
+    width: 90vw;
+    background-color: white;
     margin: auto;
+    margin-top: 10px;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+article > h2{
+    padding-bottom: 20px;
+}
+
+article > p{
+    text-align: justify;
+    margin-bottom: 20px;
+    text-indent: 20px;
 }
