--- a/exercicios/media-query/mq001/style.css
+++ b/exercicios/media-query/mq001/style.css
@@ -12,7 +12,7 @@ html, body{
 }
 
 header{
-    background-color: #2E5339;
+    background-color: #294933;
 }
 
 header > h1{
@@ -20,8 +20,21 @@ header > h1{
     text-align: center;
 }
 
-menu{
+span#burguer{
+    background-color: #495F41;
     display: block;
+    color: black;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+
+span#burguer:hover{
+    background-color: rgb(60, 60, 60);
+}
+
+menu{
+    display: none;
 }
 
 menu > ul{
