--- a/exercicios/media-query/mq001/style.css
+++ b/exercicios/media-query/mq001/style.css
@@ -7,13 +7,16 @@
     padding: 0px;
 }
 
-html, body{
-    background-color: #FF5666;
+html, body {background-color: #FF5666;}
+
+header {background-color: #294933;}
+
+header> a{
+    text-decoration: none;
+    color: black;
 }
 
-header{
-    background-color: #294933;
-}
+header> a:hover {background-color: rgb(60, 60, 60);}
 
 header > h1{
     padding: 10px;
@@ -29,17 +32,11 @@ span#burguer{
     cursor: pointer;
 }
 
-span#burguer:hover{
-    background-color: rgb(60, 60, 60);
-}
+span#burguer:hover {background-color: rgb(60, 60, 60);}
 
-menu{
-    display: none;
-}
+menu {display: none;}
 
-menu > ul{
-    list-style-type: none;
-}
+menu > ul {list-style-type: none;}
 
 menu > ul > li > a{
     display: block;
@@ -51,9 +48,7 @@ menu > ul > li > a{
     border-top: 2px solid rgb(60, 60, 60);
 }
 
-menu > ul > li > a:hover{
-    background-color: rgb(60, 60, 60);
-}
+menu > ul > li > a:hover {background-color: rgb(60, 60, 60);}
 
 main{
     width: 90vw;
@@ -64,9 +59,7 @@ main{
     border-radius: 10px;
 }
 
-article > h2{
-    padding-bottom: 20px;
-}
+article > h2 {padding-bottom: 20px;}
 
 article > p{
     text-align: justify;
