--- a/exercicios/media-query/mq001/login-mobile.css
+++ b/exercicios/media-query/mq001/login-mobile.css
@@ -1,4 +1,4 @@
-@charset 'UTF-8';
+@charset "UTF-8";
 
 /*Estilo GERAL*/
 *{
@@ -32,6 +32,9 @@ section#login{
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px #294933cb;
+
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
 }
 
 section#login> div#imagem{
