--- a/exercicios/media-query/mq001/login-mobile.css
+++ b/exercicios/media-query/mq001/login-mobile.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-/*Estilo GERAL*/
+/*Estilo GERAL E MOBILE*/
 *{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
@@ -31,7 +31,7 @@ section#login{
     width: 250px;
     height: 500px;
     border-radius: 20px;
-    box-shadow: 0px 0px 10px #294933cb;
+    box-shadow: 0px 0px 10px #294933db;
 
     transition: width .3s, height .3s;
     transition-timing-function: ease;
@@ -47,4 +47,14 @@ section#login> div#imagem{
 section#login> div#formulario{
     display: block;
     padding: 10px;
+}
+
+div#formulario> h1{
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario> p{ 
+    font-size: 0.8em;
+    text-align: center;
 }
