--- a/exercicios/media-query/mq001/login-telas.css
+++ b/exercicios/media-query/mq001/login-telas.css
@@ -29,13 +29,23 @@
     section#login {width: 950px;}
 
     section#login> div#imagem{
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     section#login> div#formulario{ 
-        float: right;
+        float: left;
         width: 5%;
+    }
+
+    div#formulario> h1{ 
+        font-size: 2em;
+        text-align: center;
+    }
+
+    div#formulario> p{ 
+        font-size: 1.2em;
+        text-align: center;
     }
 }
