--- a/exercicios/media-query/mq001/login-mobile.css
+++ b/exercicios/media-query/mq001/login-mobile.css
@@ -24,7 +24,6 @@ section#login{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
 
     background-color: #495F41;
@@ -35,6 +34,7 @@ section#login{
 
     transition: width .3s, height .3s;
     transition-timing-function: ease;
+    transform: translate(-50%, -50%);
 }
 
 section#login> div#imagem{
@@ -58,3 +58,62 @@ div#formulario> p{
     font-size: 0.8em;
     text-align: center;
 }
+
+form> div.campo{
+    display: block;
+    background-color: #294933;
+    border: 1px solid rgb(0, 0, 0);
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+div.campo> span{
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo> input{
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 90%;
+    border-radius: 8px;
+    padding: 5px;
+    transform: translateY(-12px); /*Sempre última linha*/
+}
+
+form> input[type=submit]{
+    display: block;
+    align-items: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #294933;
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form> input[type=submit]:hover{ background-color: rgb(60, 60, 60);}
+
+form> a.botao{
+    margin-top: 5px;
+    padding-top: 5px;
+    display: block;
+    font-size: 1em;
+    color: black;
+    text-decoration: none;
+    text-align: center;
+    width: 100%;
+    height: 40px;
+    background-color: #294933;
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form> a.botao:hover{ background-color: rgb(60, 60, 60)}
+
+form> a.botao> i{ font-size: 0.8em;}
