--- a/exercicios/media-query/mq001/login-telas.css
+++ b/exercicios/media-query/mq001/login-telas.css
@@ -6,7 +6,10 @@
         background-image: linear-gradient(to top,  #FF5666, #294933cb);
     }
 
-    section#login {width: 80vw;}
+    section#login {
+        width: 80vw;
+        height: 300px;
+    }
 
     section#login> div#imagem{ 
         float: left;
@@ -26,7 +29,10 @@
         background-image: linear-gradient(to bottom, #294933cb, #FF5666);
     }
 
-    section#login {width: 950px;}
+    section#login {
+        width: 950px;
+        height: 350px;
+    }
 
     section#login> div#imagem{
         float: right;
@@ -36,7 +42,7 @@
 
     section#login> div#formulario{ 
         float: left;
-        width: 5%;
+        width: 50%;
     }
 
     div#formulario> h1{ 
@@ -45,7 +51,8 @@
     }
 
     div#formulario> p{ 
-        font-size: 1.2em;
+        font-size: 1em;
         text-align: center;
+        margin: 20px 0px;
     }
 }
