--- a/exercicios/flex-box/ex003/style.css
+++ b/exercicios/flex-box/ex003/style.css
@@ -16,12 +16,37 @@ body{
 
 header{
     background-color: #877666;
-    color: white;
+    color: #331832;
     padding: 10px;
+
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
 }
 
-header > nav{
-    
+header> h1 {flex: 0 0 200px;}
+
+header> nav {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-end;
+}
+
+header> nav> a{
+    background-color: #F4EDED;
+    color: #331832;
+    text-decoration: none;
+    text-align: center;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 5px;
+}
+
+header> nav> a:hover{
+    background-color: #331832;
+    color: #F4EDED;
+    transition: background-color .5s;
 }
 
 main{
